--- a/TrainingPA/TrainingPA.Android/TrainingPA.Android.csproj
+++ b/TrainingPA/TrainingPA.Android/TrainingPA.Android.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>bb5c2693-38b7-4d58-8939-2db0e5f654ba</ProjectGuid>
+    <ProjectGuid>{BB5C2693-38B7-4D58-8939-2DB0E5F654BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>TrainingPA.Android</RootNamespace>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
@@ -62,6 +62,6 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\Icon.png" />
   </ItemGroup>
-      <Import Project="..\TrainingPA\TrainingPA.projitems" Label="Shared" Condition="Exists('..\TrainingPA\TrainingPA.projitems')" />
+  <Import Project="..\TrainingPA\TrainingPA.projitems" Label="Shared" Condition="Exists('..\TrainingPA\TrainingPA.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
 </Project>
